--- a/Ajax Assignment/index.html
+++ b/Ajax Assignment/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>API Data in Card View</title>
+    <title>Fetch API Data</title>
+    <h2>BEYOND KLASSES API</h2>
     <style>
-        /* Add your CSS styles for card view here */
+       
         .card {
             border: 1px solid #ccc;
             padding: 10px;
